Renamed some roles and permissions